tests/test_files_pa3/errors/UndefineType2.ic
class A {
	
	void sfunc() {
		B b;
	}


}